[gd_scene load_steps=2 format=3 uid="uid://c7s5aoljkypf3"]

[ext_resource type="Script" uid="uid://bvbx5k7h51hif" path="res://addons/gnet/examples/EnetP2P/LobbyMain.gd" id="1_yhj1s"]

[node name="LobbyMain" type="Control"]
layout_mode = 3
anchors_preset = 0
offset_right = 40.0
offset_bottom = 40.0
script = ExtResource("1_yhj1s")

[node name="VBoxContainer" type="VBoxContainer" parent="."]
layout_mode = 0
offset_right = 337.0
offset_bottom = 147.0

[node name="Label" type="Label" parent="VBoxContainer"]
layout_mode = 2
text = "Simple Enet P2P Lobby"

[node name="HBoxInputs" type="HBoxContainer" parent="VBoxContainer"]
layout_mode = 2

[node name="IPLabel" type="Label" parent="VBoxContainer/HBoxInputs"]
layout_mode = 2
text = "IP:"

[node name="IPInput" type="LineEdit" parent="VBoxContainer/HBoxInputs"]
layout_mode = 2

[node name="PortLabel" type="Label" parent="VBoxContainer/HBoxInputs"]
layout_mode = 2
text = "Port:"

[node name="PortInput" type="LineEdit" parent="VBoxContainer/HBoxInputs"]
layout_mode = 2

[node name="HBoxButtons" type="HBoxContainer" parent="VBoxContainer"]
layout_mode = 2

[node name="HostButton" type="Button" parent="VBoxContainer/HBoxButtons"]
layout_mode = 2
text = "Host"

[node name="JoinButton" type="Button" parent="VBoxContainer/HBoxButtons"]
layout_mode = 2
text = "Join"

[node name="DisconnectButton" type="Button" parent="VBoxContainer/HBoxButtons"]
layout_mode = 2
text = "Disconnect"

[node name="StatusLabel" type="Label" parent="VBoxContainer"]
layout_mode = 2

[node name="PlayersList" type="Label" parent="VBoxContainer"]
layout_mode = 2
